src/golden/cards/templates/typeerrors/test.golden/noprimitives.fl
// Test that we cannot directly assign numeric or instant primitives to a slot

	card NoPrimitives
		state
			Number n
			Instant i
			Boolean b
			
		template top
			n <- n
			i <- i
			b <- b